force-app/main/default/objects/Timeline_Configuration__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <inlineHelpText>If records are generated from an Apex Class specify the Apex Class here. The class must implement ITimelineApexRecordsFetcher</inlineHelpText>
    <label>Apex Class</label>
    <length>150</length>
    <type>Text</type>
</CustomField>