force-app/main/default/objects/Timeline_Configuration__mdt/fields/Drilldown_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Drilldown_Id_Field__c</fullName>
    <description>The Id field to use when navigating on click of a record in the timeline. Used to support the ability to show a junction object record but drill into a parent.</description>
    <inlineHelpText>Override the record shown when a user clicks on a record. The Id field to use when navigating goes here.</inlineHelpText>
    <label>Drilldown Id Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>