force-app/main/default/objects/Timeline_Configuration__mdt/fields/No_Drilldown__c.field-meta.xml
<CustomField>
    <fullName>No_Drilldown__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to not allow drill down to record from the timeline lwc</inlineHelpText>
    <label>No Drilldown</label>
    <type>Checkbox</type>
</CustomField>