force-app/main/default/objects/Timeline_Configuration__mdt/validationRules/No_Big_Objects_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Big_Objects_Allowed</fullName>
    <active>true</active>
    <description>Timeline is not a good option for BigObjects</description>
    <errorConditionFormula>IF (  CONTAINS( Object_Name__c, &apos;__b&apos;), true, false)</errorConditionFormula>
    <errorDisplayField>Object_Name__c</errorDisplayField>
    <errorMessage>Big Objects cannot be used in the timeline. Timeline supports standard and custom objects only.</errorMessage>
</ValidationRule>