force-app/main/default/objects/Timeline_Configuration__mdt/listViews/Apex_Class_Configurations.listView-meta.xml
<ListView>
    <fullName>Apex_Class_Configurations</fullName>
    <columns>DeveloperName</columns>
    <columns>Parent_Object__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>No_Drilldown__c</columns>
    <columns>Icon__c</columns>
    <columns>Icon_Background_Colour__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Apex_Class__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Test__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Apex Class Configurations</label>
    <language>en_US</language>
</ListView>